<resources>
    <string name="app_name">TareaFormulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="clave">Clave</string>
    <string name="crearcuenta">Crear Cuenta</string>
    <string name="tituloActivity2">DATOS USUARIO</string>
    <string name="EmptyActivity2">Sin datos</string>
    <string name="btnRegresar">VOLVER</string>
    <string name="btnNuevo">Nuevo usuario</string>
    <string name="fragmento">Saludos humano</string>
    <string name="opcion1">SI</string>
    <string name="opcion2">NO</string>
    <string name="fragmento2">Fragmento en el Show</string>
    <string name="fragmento_01">Conoces este personaje?</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
</resources>