<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainFragment02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/fragmento_01"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/radioGroup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion1" />

            <RadioButton
                android:id="@+id/radioButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion2" />
        </RadioGroup>
</LinearLayout>