<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azul"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tvFragmewnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/fragmento"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/opcion1" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:textSize="24dp"
            android:layout_height="wrap_content"
            android:text="@string/opcion2" />
    </RadioGroup>

</LinearLayout>